--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-<h1>inizio</h1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">^M
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">^M
+	<head>
+		<title>Donapieppo</title>
+
+		<meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+		<meta name="author"      content="Donapieppo" />
+		<meta name="description" content="Home page" />
+		<meta name="keywords"    content="donapieppo" />
+		<meta name="robots"      content="index, follow, noarchive" />
+	</head>
+
+	<body>
+		<h1>inizio</h1>
+
+	</body>
+</html>
+
+		
 
